Mostly polished proxy